@@ -1,16 +1,14 @@
 package com.github.saphyra.apphub.service.skyxplore.game.service.planet.queue.service.construction;
 
-import com.github.saphyra.apphub.service.skyxplore.game.domain.map.Planet;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.map.Surface;
+import com.github.saphyra.apphub.api.skyxplore.model.game.ConstructionType;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.GameData;
 import com.github.saphyra.apphub.service.skyxplore.game.service.planet.queue.QueueItem;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static java.util.Objects.nonNull;
+import java.util.UUID;
 
 @Component
 @RequiredArgsConstructor
@@ -18,14 +16,11 @@ import static java.util.Objects.nonNull;
 class ConstructionQueueItemQueryService {
     private final BuildingConstructionToQueueItemConverter converter;
 
-    List<QueueItem> getQueue(Planet planet) {
-        return planet.getSurfaces()
-            .values()
+    public List<QueueItem> getQueue(GameData gameData, UUID location) {
+        return gameData.getConstructions()
+            .getByLocationAndType(location, ConstructionType.CONSTRUCTION)
             .stream()
-            .filter(surface -> nonNull(surface.getBuilding()))
-            .map(Surface::getBuilding)
-            .filter(building -> nonNull(building.getConstruction()))
-            .map(converter::convert)
-            .collect(Collectors.toList());
+            .map(construction -> converter.convert(gameData, construction))
+            .toList();
     }
 }
